--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- This is a comment -->
     
-    <textarea name="textArea" id="textArea" cols="30" rows="10"></textarea>
+    <textarea name="textArea" id="textArea" autofocus></textarea>
     <br>
     <button id="btn">ok</button>
     <div id="textDiv"></div>
